# model-playground-be

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_runtime_metadata.py  003_message_viz_html.py  004_playground_tools.py
src/playground/: app.py  config.py  deps.py  ids.py
src/playground/auth/: __init__.py  deps.py  jwt.py  passwords.py  router.py  schemas.py
src/playground/db/: connection.py  models.py
src/playground/db/repos/: model_repo.py  session_repo.py  thread_repo.py  user_repo.py
src/playground/models/: router.py  schemas.py  service.py
src/playground/playground/: fanout.py  router.py  schemas.py
src/playground/runtime/: client.py
src/playground/sessions/: __init__.py  fanout.py  router.py  schemas.py  service.py
src/playground/tools/: __init__.py  router.py
tests/: test_app_lifespan.py  test_auth_passwords.py  test_models_router.py  test_models_service.py  test_runtime_client.py  test_sessions_service.py
